Update app naming and icon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="%BASE_URL%icons/icon-512x512.png" />
+    <link rel="icon" type="image/svg+xml" href="icons/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-    <title>Conference app</title>
+    <title>SERVICES 2025 App</title>
   </head>
   <body>
     <div id="root"></div>
